# src/swagger.json
@@ -277,6 +277,26 @@
 				"security": [],
 				"parameters": []
 			}
+		},
+		"/server/messages": {
+			"get": {
+				"operationId": "GetMessages",
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {}
+							}
+						}
+					}
+				},
+				"tags": [
+					"Server"
+				],
+				"security": [],
+				"parameters": []
+			}
 		}
 	},
 	"servers": [
